Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.075     2015-06-12 11:40:31-04:00 America/New_York

    [CHANGED]

    - Swapped in CopyFilesFromBuild::Filtered for the unfiltered version.
      This gets rid of "generated by" lines in Makefile.PL that cause
      unnecessary file churn as Dist::Zilla is upgraded.

0.074     2015-01-22 17:07:41-05:00 America/New_York

    [CHANGED]

    - Allow dirty Makefile.PL/cpanfile and commit it before tagging.

0.073     2014-12-10 16:36:34-05:00 America/New_York

    [CHANGED]

    - Swapped out ReadmeFromPod for Pod2Readme, which is simpler and
      lighter.

0.072     2014-09-26 16:23:55-04:00 America/New_York

    [FIXED]

    - Fixed bug where version bumps weren't being committed after release

0.071     2014-09-26 11:56:23-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - No longer copies cpanfile after build (except under auto_version);
      instead copies Makefile.PL.  With a Makefile.PL and embedded
      $VERSION, this makes a repo checkout ready for end-users without
      needing to know anything about Dist::Zilla.

0.070     2014-09-25 17:36:54-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - Switched version handling from Git::NextVersion + OurPkgVersion to
      RewriteVerson + BumpVersionAfterRelease so that files in the repo
      will have a $VERSION.  This will require adding a $VERSION statement
      back to all modules before releasing.  Also added an "auto_version"
      option to allow AutoVersion + PkgVersion for distributions that need
      it.

    [CHANGED]

    - No longer allows dirty files at release time

    - Switched from ContributorsFromGit to Git::Contributors and updated
      Pod::Weaver::Section::Contributors prereq to match

0.069     2014-07-29 14:17:19-04:00 America/New_York

    [CHANGED]

    - Bumped Test::ReportPrereqs dependency to 0.016 because I'm an idiot

0.068     2014-07-29 13:39:29-04:00 America/New_York
